# effectful-notify

./: CHANGELOG.md  LICENSE  Main.hs  README.md  effectful-notify.cabal  notify-effectful.cabal  shell.nix
nix/: haskellPackages.nix  versions.nix
src/Effectful/DBus/: Notify.hs
src/Effectful/DBus/Notify/: Action.hs  Action.hs-boot  Internal.hs
