cabal-version:      3.0
name:               effectful-notify
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Kirill Valiavin
maintainer:         kvalyavin@yandex.ru
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable test
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0
                    , effectful-notify
    default-language: GHC2021
    
library
    import:           warnings
    exposed-modules:  Effectful.DBus.Notify
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
                    , effectful
                    , effectful-core
                    , dbus
                    , containers
    hs-source-dirs:   src
    default-language: GHC2021
