cabal-version:      3.0
name:               notify-effectful
version:            0.1.1.0
-- synopsis:
-- description:
license:            BSD-2-Clause
license-file:       LICENSE
author:             Kirill Valiavin
maintainer:         kvalyavin@yandex.ru
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable test
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0
                    , effectful-core
                    , notify-effectful
    default-language: GHC2021
    
library
    import:           warnings
    exposed-modules:  Effectful.DBus.Notify
                    , Effectful.DBus.Notify.Internal
                    , Effectful.DBus.Notify.Action
    -- other-modules:
    default-extensions: LambdaCase
                      , DerivingStrategies
                      , RecordWildCards
                      , OverloadedStrings
                      , DataKinds
                      , TypeFamilies
    ghc-options:      -freverse-errors
    build-depends:    base ^>=4.17.0.0
                    , effectful
                    , effectful-core
                    , time
                    , dbus
                    , containers
    hs-source-dirs:   src
    default-language: GHC2021
